# note-app

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  note.rs  storage.rs
