[package]
name = "note-app"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
eframe = "0.31"
egui = "0.31"
pulldown-cmark = "0.12"
open = "5"
